--- a/tunnel.conf
+++ b/tunnel.conf
@@ -8,5 +8,6 @@ server {
     proxy_pass http://127.0.0.1:4000;
     proxy_buffering off;
     proxy_set_header X-Real-IP $remote_addr;
+    include /etc/nginx/proxy_params;
   }
 }
