Add comment for server_name

--- a/tunnel.conf
+++ b/tunnel.conf
@@ -2,6 +2,7 @@ server {
   listen 80;
   listen [::]:80;
 
+  # Replace with your domain, including subdomain. For example, "server_name dev.freewaffle.net" or "server_name *.freewaffle.net"
   server_name YOURDOMAINHERE;
 
   location / {
